Fix display issues on mobile

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -25,9 +25,9 @@
 }
 
 body {
-    box-sizing: border-box;
-    width: 100%;
-    height: 100%;
+    padding: 0;
+    margin: 0;
+    width: 100vw;
     display: flex;
     min-height: 100vh;
     flex-direction: column;
@@ -42,8 +42,8 @@ body {
     padding: 0;
     margin: 0;
     width: 100%;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding-left: 2px;
+    padding-right: 2px;
     max-width: 1120px;
     min-height: 100vh;
 }
@@ -349,9 +349,10 @@ body {
 }
 
 .article {
+    max-width: 100%;
+    /* display: contents; */
     margin: auto;
     font-size: 1.4rem;
-    max-width: 64rem;
 }
 
 .article h1 {
@@ -365,12 +366,12 @@ body {
 .article p {
     margin: 0;
     margin-top: 10px;
-    margin-left: 20px;
 }
 
 .article ul {
     margin: 0;
     margin-top: 10px;
+    padding-left: 30px;
 }
 
 .article ul li {
@@ -385,6 +386,8 @@ body {
 }
 
 .article pre {
+    margin-left: 2px;
+    margin-right: 2px;
     margin-top: 30px;
     margin-bottom: 30px;
     padding: 10px;
@@ -422,8 +425,4 @@ body {
     font-size: 20px;
     font-weight: bold;
     font-family: detail;
-}
-
-.article ul {
-    margin-left: 10px;
 }
